force-app/main/default/objects/Service_Catalog__c/Service_Catalog__c.object-meta.xml
<CustomObject>
    <label>Service Catalog</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Service Catalog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Catalog Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>