force-app/main/default/objects/Service_Catalog__c/fields/CSP__c.field-meta.xml
<CustomField>
    <fullName>CSP__c</fullName>
    <label>CSP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>