force-app/main/default/objects/Service_Catalog__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>